# mcp-genesis-connect

./: Dockerfile  README.md  genesis_connect.py  genesis_info.py  pyproject.toml  requirements.txt
models/: car.py  type.py
src/genesis_connect/: server.py
src/genesis_connect/models/: car.py
