[project]
name = "genesis-connect"
version = "0.0.4"
description = "MCP for Genesis Connect"
authors = [{name = "clauzewitz"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.6",
    "aiohttp>=3.12.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis_connect"]

[project.scripts]
genesis-connect = "genesis_connect.server:main"